Finished Header and added styling using CSS

--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
 </head>
 <body>
     
-    <header>
-        <h1>Hello</h1>
-    </header>
-    
+    <div class="header">
+        <div class="header-left">
+            <div class="title">
+                <h2>PORTFOLIO</h2>
+            </div>
+        </div>
+        <div class="header-right">
+            <ul>
+                <li>Sobre Mim</li>
+                <li>Meus Projetos</li>
+                <li>Contato</li>
+            </ul>
+        </div>
+    </div>
+    <div class="first-section">
+        <
+    </div>
 </body>
 </html>
