--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="header-left">
             <div class="title">
-                <h2>PORTFOLIO</h2>
+                <h2>Portfolio</h2>
             </div>
         </div>
         <div class="header-right">
@@ -24,7 +24,16 @@
         </div>
     </div>
     <div class="first-section">
-        <
+        <div class="content">
+            <div class="content-left">
+
+                <h2>Pedro Henrique <br>Graça</h2>
+
+            </div>
+            <div class="content-right">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
