Added images and favicon

--- a/index.html
+++ b/index.html
@@ -3,32 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pedro Graça</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     
-    <div class="header">
+    <div class="header" id="home">
         <div class="header-left">
             <div class="title">
-                <h2>Portfolio</h2>
+                <a href="#home"><img src="images/logo.png" alt="Pedro Henrique Graça logo"></a>
             </div>
         </div>
         <div class="header-right">
             <ul>
-                <li>Sobre Mim</li>
-                <li>Meus Projetos</li>
-                <li>Contato</li>
+                <li><a href="#sobremim">Sobre Mim</a></li>
+                <li><a href="">Meus Projetos</a></li>
+                <li><a href="">Contato</a></li>
             </ul>
         </div>
     </div>
-    <div class="first-section">
+    <div class="first-section" id="sobremim">
         <div class="content">
             <div class="content-left">
-
-                <h2>Pedro Henrique <br>Graça</h2>
-
+                <h2>Sobre Mim</h2>
             </div>
             <div class="content-right">
 
