--- a/index.html
+++ b/index.html
@@ -23,14 +23,21 @@
             </ul>
         </div>
     </div>
-    <div class="first-section" id="sobremim">
-        <div class="content">
-            <div class="content-left">
-                <h2>Sobre Mim</h2>
-            </div>
-            <div class="content-right">
 
+    <div class="first-section" id="home">
+        <div class="content">
+            <img class="pedro" src="images/logo.png">
+        <div class="text">
+            <h1>Pedro Henrique Graça</h1>
+            <p class="desc">Software Engineer</p>
             </div>
+        </div>
+    </div>
+
+    <div class="second-section" id="sobremim">
+        <div class="content">
+            <h1>Sobre Mim</h1>
+            <p class="sobre">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
         </div>
     </div>
 </body>
